--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      body {
+        width: 100%;
+        height: 100%;
+        background-image: url("night-sky.jpg");
+        margin: 0px;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+      }
+    </style>
     <title>WeShareUs</title>
   </head>
   <body style="margin:0">
