[style]: fix height

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <style>
       body {
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background-image: url("night-sky.jpg");
         margin: 0px;
         background-size: cover;
