--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
         margin: 0px;
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
       }
     </style>
     <title>WeShareUs</title>
