--- a/public/index.html
+++ b/public/index.html
@@ -26,19 +26,12 @@
     -->
     <style>
       body {
-        width: 100%;
-        height: 100vh;
-        background-image: url("night-sky.jpg");
-        margin: 0px;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: scroll;
+        margin: 0;
       }
     </style>
     <title>WeShareUs</title>
   </head>
-  <body style="margin:0">
+  <body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
